--- a/public/css/app.css
+++ b/public/css/app.css
@@ -34751,8 +34751,161 @@ span.flatpickr-weekday {
   }
 }
 
-.spinner{
-  position: absolute;
+/* .loader {
+	border-top-color: #3498db;
+	-webkit-animation: spinner 1.5s linear infinite;
+	animation: spinner 1.5s linear infinite;
+}
+
+@-webkit-keyframes spinner {
+	0% {
+		-webkit-transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+	}
+}
+
+@keyframes spinner {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+} */
+
+/*!
+ * Load Awesome v1.1.0 (http://github.danielcardoso.net/load-awesome/)
+ * Copyright 2015 Daniel Cardoso <@DanielCardoso>
+ * Licensed under MIT
+ */
+
+.la-line-scale-pulse-out,
+ .la-line-scale-pulse-out > div {
+  position: relative;
+  box-sizing: border-box;
+}
+
+.la-line-scale-pulse-out {
+  display: block;
+  font-size: 0;
+  color: #fff;
+}
+
+.la-line-scale-pulse-out.la-dark {
+  color: #333;
+}
+
+.la-line-scale-pulse-out > div {
+  display: inline-block;
+  float: none;
+  background-color: currentColor;
+  border: 0 solid currentColor;
+}
+
+.la-line-scale-pulse-out {
+  width: 40px;
+  height: 32px;
+}
+
+.la-line-scale-pulse-out > div {
+  width: 4px;
+  height: 32px;
+  margin: 2px;
+  margin-top: 0;
+  margin-bottom: 0;
+  border-radius: 0;
+  -webkit-animation: line-scale-pulse-out .9s infinite cubic-bezier(.85, .25, .37, .85);
+  animation: line-scale-pulse-out .9s infinite cubic-bezier(.85, .25, .37, .85);
+}
+
+.la-line-scale-pulse-out > div:nth-child(3) {
+  -webkit-animation-delay: -.9s;
+  animation-delay: -.9s;
+}
+
+.la-line-scale-pulse-out > div:nth-child(2),
+ .la-line-scale-pulse-out > div:nth-child(4) {
+  -webkit-animation-delay: -.7s;
+  animation-delay: -.7s;
+}
+
+.la-line-scale-pulse-out > div:nth-child(1),
+ .la-line-scale-pulse-out > div:nth-child(5) {
+  -webkit-animation-delay: -.5s;
+  animation-delay: -.5s;
+}
+
+.la-line-scale-pulse-out.la-sm {
+  width: 20px;
+  height: 16px;
+}
+
+.la-line-scale-pulse-out.la-sm > div {
+  width: 2px;
+  height: 16px;
+  margin: 1px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.la-line-scale-pulse-out.la-2x {
+  width: 80px;
+  height: 64px;
+}
+
+.la-line-scale-pulse-out.la-2x > div {
+  width: 8px;
+  height: 64px;
+  margin: 4px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.la-line-scale-pulse-out.la-3x {
+  width: 120px;
+  height: 96px;
+}
+
+.la-line-scale-pulse-out.la-3x > div {
+  width: 12px;
+  height: 96px;
+  margin: 6px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+/*
+  * Animation
+  */
+
+@-webkit-keyframes line-scale-pulse-out {
+  0% {
+    transform: scaley(1);
+  }
+
+  50% {
+    transform: scaley(.3);
+  }
+
+  100% {
+    transform: scaley(1);
+  }
+}
+
+@keyframes line-scale-pulse-out {
+  0% {
+    transform: scaley(1);
+  }
+
+  50% {
+    transform: scaley(.3);
+  }
+
+  100% {
+    transform: scaley(1);
+  }
 }
 
 @media (min-width: 640px) {
@@ -194329,4 +194482,6 @@ span.flatpickr-weekday {
             animation: spinAround 500ms infinite linear;
   }
 }
+
+
 
